--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
       rel="stylesheet"
     />
 
-    <title>Reflux HTML CSS Template</title>
-<!--
-Reflux Template
-https://templatemo.com/tm-531-reflux
--->
+    <title>TeknoSenpai</title>
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
