--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
                     N.I.S.D. is a group that focuses on Security for the Italian Community on <a href="https://discord.com">Discord</a>.
                     N.I.S.D. helps Discord users with server settings and reports amongst many other things.
                     <br>
+                    I am part of the Intelligence Division of N.I.S.D., our main focus is helping users with reports, such as server nukes/raids or harrasment.
+                    <br>
                     Click the button below to join the Discord Server!
                   </p>
                   <div class="white-button">
