--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
       href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
       rel="stylesheet"
     />
-
+    
+    <!-- Icons -->
+    <link rel="shortcut icon" type="image/gif" href="https://cdn.discordapp.com/avatars/836663939609657385/a_ddf61892df0013e023219e42a22fdcd6.gif?size=612">
+    <meta property="og:image" content="https://cdn.discordapp.com/avatars/836663939609657385/a_ddf61892df0013e023219e42a22fdcd6.gif?size=1024">
+    <meta property="twitter:image" content="https://cdn.discordapp.com/avatars/836663939609657385/a_ddf61892df0013e023219e42a22fdcd6.gif?size=1024">
+    
     <title>TeknoSenpai</title>
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
