--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     
     <!-- Icons -->
     <link rel="shortcut icon" type="image/gif" href="https://cdn.discordapp.com/avatars/836663939609657385/a_ddf61892df0013e023219e42a22fdcd6.gif?size=612">
-    <meta property="og:image" content="https://cdn.discordapp.com/avatars/836663939609657385/a_ddf61892df0013e023219e42a22fdcd6.gif?size=1024">
-    <meta property="twitter:image" content="https://cdn.discordapp.com/avatars/836663939609657385/a_ddf61892df0013e023219e42a22fdcd6.gif?size=1024">
+    <link rel="image_src" href="https://cdn.discordapp.com/avatars/836663939609657385/a_ddf61892df0013e023219e42a22fdcd6.gif?size=1024">
     
     <title>TeknoSenpai</title>
     <!-- Bootstrap core CSS -->
