--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <link rel="icon" type="image/x-icon" href="https://cdn.discordapp.com/avatars/836663939609657385/a_c1798288c72cd7a563ed3172caf18530.png" />
     <meta property="og:image" content"https://cdn.discordapp.com/avatars/836663939609657385/a_c1798288c72cd7a563ed3172caf18530.png" />
     <meta property="twitter:image" content="https://cdn.discordapp.com/avatars/836663939609657385/a_c1798288c72cd7a563ed3172caf18530.png" />
+    <meta property="twitter:card" content="https://cdn.discordapp.com/banners/836663939609657385/a_3119fd7476adf1855f65bc0295b7fef0.gif" />
+    <meta property="card" content="https://cdn.discordapp.com/banners/836663939609657385/a_3119fd7476adf1855f65bc0295b7fef0.gif" />
     
     <title>TeknoSenpai</title>
     
