--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <meta name="keywords" content="developer, tekno, teknosenpai, discord, discord bots" />
     
     <!-- Icons -->
-    <link rel="icon" type="image/x-icon" href="https://tekno.is-a.dev/discord-image.png" />
+    <link rel="icon" type="image/x-icon" href="https://tekno.is-a.dev/assets/discord-image.png" />
     <meta property="og:image" content="https://tekno.is-a.dev/assets/discord-image.png" />
-    <meta property="twitter:image" content="https://tekno.is-a.dev/discord-image.png" />
+    <meta property="twitter:image" content="https://tekno.is-a.dev/assets/discord-image.png" />
     <meta property="card" content="https://tekno.is-a.dev/assets/discord-banner.png" />
     
     <title>TeknoSenpai</title>
