--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     
     <!-- Icons -->
     <link rel="icon" type="image/x-icon" href="https://tekno.is-a.dev/assets/discord-image.png" />
-    <meta property="og:image" content="https://tekno.is-a.dev/assets/discord-image.jpeg" />
+    <meta property="og:image" content="https://tekno.is-a.dev/assets/discord-image.png" />
     <meta property="twitter:image" content="https://tekno.is-a.dev/assets/discord-image.png" />
     
     <title>TeknoSenpai</title>
