--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
     <script src="assets/js/owl-carousel.js"></script>
     <script src="assets/js/lightbox.js"></script>
     <script src="assets/js/custom.js"></script>
-    <script src="test-js/index.js" async></script>
+    <script src="profile/index.js" async></script>
 
     <script>
       //according to loftblog tut
